POCOR-2530 - Fixed IE9 select input misalignment of the default arrow with the custom arrow.

--- a/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
+++ b/plugins/OpenEmis/webroot/css/themes/core/layout.overwrites.css
@@ -90,3 +90,10 @@ a.btn-green:hover {
 .rtl .split-panes.horizontal > .split-pane2 {
     right: 10%;
 }
+
+/* IE9 */
+
+.rtl .input-select-wrapper:before {
+    left: 22px !important;
+    top: 2px;    
+}
